--- a/fenliu.ini
+++ b/fenliu.ini
@@ -12,7 +12,7 @@
 ;设置规则标志位
 ruleset=🤖 Openai,https://raw.githubusercontent.com/Yzaams/clash/main/Openai.list
 ruleset=🖥 Microsoft,https://raw.githubusercontent.com/Yzaams/clash/main/Microsoft.list
-ruleset=🎬 Moive,https://raw.githubusercontent.com/Yzaams/clash/main/movie
+ruleset=🎬 影视,https://raw.githubusercontent.com/Yzaams/clash/main/movie
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Yzaams/clash/main/360Update.list
@@ -50,6 +50,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/Yzaams/clash/main/movie.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
