--- a/fenliuX.ini
+++ b/fenliuX.ini
@@ -75,7 +75,7 @@ custom_proxy_group=📺 Bahamut`select`[]🇨🇳 台湾高级`[]🇨🇳 台湾
 custom_proxy_group=🎵 Shopify`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 手动切换`
 custom_proxy_group=📽️ Disney`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 手动切换`
 custom_proxy_group=📽️ Netflix`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 手动切换`
-custom_proxy_group=🌍 国外媒体`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]`
+custom_proxy_group=🌍 国外媒体`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 手动切换`
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🚀 手动切换`
 custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🇭🇰 香港高级`[]🇨🇳 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级`[]🚀 手动切换`
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 手动切换
