--- a/fenliu多倍.ini
+++ b/fenliu多倍.ini
@@ -50,8 +50,8 @@ ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash
 ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
-ruleset=🌏 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=🌍 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=📽️ 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=📽️ 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -84,6 +84,8 @@ custom_proxy_group=🎵 Shopify`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾
 custom_proxy_group=📽️ Disney`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📽️ Netflix`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎮 Game`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📽️ 国内媒体`select`[]DIRECT
+custom_proxy_group=📽️ 国外媒体`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
