--- a/fenliu多倍.ini
+++ b/fenliu多倍.ini
@@ -79,7 +79,7 @@ custom_proxy_group=📲 Line`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低
 custom_proxy_group=📲 Whatsapp`select`[]🇭🇰 香港高级`[]🇨🇳 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎤 Discord`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=💳 Paypal`select`[]🇭🇰 香港高级`[]🇨🇳 台湾高级`[]🇸🇬 狮城高级`[]🇯🇵 日本高级`[]🇺🇲 美国高级`[]🇰🇷 韩国高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 Bahamut`select`[]🇨🇳 台湾高级`[]🇨🇳 台湾低倍`[]🚀 节点选择`[]🚀 手动切换`
+custom_proxy_group=📺 Bahamut`select`[]🇨🇳 台湾高级`[]🇨🇳 台湾低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎵 Shopify`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📽️ Disney`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📽️ Netflix`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
