--- a/fenliu.ini
+++ b/fenliu.ini
@@ -70,7 +70,7 @@ custom_proxy_group=🎬 YouTube`select`[]🇭🇰 香港节点`[]🇨🇳 台湾
 custom_proxy_group=🖥 Microsoft`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=☁︎ onedrive`select`[]DIRECT
 custom_proxy_group=🤖 OpenAi`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🍎 Apple`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📲 Facebook`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📲 Twitter`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
