--- a/fenliu多倍.ini
+++ b/fenliu多倍.ini
@@ -10,6 +10,7 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
+ruleset=🖥 360,https://raw.githubusercontent.com/Yzaams/clash/main/360Update.list
 ruleset=🖥 Microsoft,https://raw.githubusercontent.com/Yzaams/clash/main/Microsoft.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
