--- a/fenliu多倍.ini
+++ b/fenliu多倍.ini
@@ -95,12 +95,12 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🇭🇰 香港高级`url-test`^((?!.*0\.[1-9].|*0\.0[1-9]).)*$(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本高级`url-test`^((?!.*0\.[1-9].|*0\.0[1-9]).)*$(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国高级`url-test`^((?!.*0\.[1-9].|*0\.0[1-9]).)*$(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇨🇳 台湾高级`url-test`^((?!.*0\.[1-9].|*0\.0[1-9]).)*$(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城高级`url-test`^((?!.*0\.[1-9].|*0\.0[1-9]).)*$(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国高级`url-test`^((?!.*0\.[1-9].|*0\.0[1-9]).)*$(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港高级`url-test`^((?!*0\.[1-9].|*0\.0[1-9]).)*$(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本高级`url-test`^((?!*0\.[1-9].|*0\.0[1-9]).)*$(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国高级`url-test`^((?!*0\.[1-9].|*0\.0[1-9]).)*$(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇨🇳 台湾高级`url-test`^((?!*0\.[1-9].|*0\.0[1-9]).)*$(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城高级`url-test`^((?!*0\.[1-9].|*0\.0[1-9]).)*$(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国高级`url-test`^((?!*0\.[1-9].|*0\.0[1-9]).)*$(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
