--- a/fenliu多倍测试.ini
+++ b/fenliu多倍测试.ini
@@ -101,7 +101,7 @@ custom_proxy_group=🇺🇲 美国高级`select`.*`url-test`^(?!.*\b0\.(?:[1-9]|
 custom_proxy_group=🇨🇳 台湾高级`select`.*`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(台|新北|彰化|TW|Taiwan)\b`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城高级`select`.*`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(新加坡|坡|狮城|SG|Singapore)\b`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国高级`select`.*`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b\b(KR|Korea|KOR|首尔|韩|韓)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港高级`select`.*0\.(?:[1-9]|[1-8]\d|9\d{1,2})$`url-test`^(?=.*\b(港|HK|Hong Kong)\b).*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港低倍`select`.*0\.(?:[1-9]|[1-8]\d|9\d{1,2})$`url-test`^(?=.*\b(港|HK|Hong Kong)\b).*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本低倍`select`.*0\.(?:[1-9]|[0-9]\d).*`url-test`^(?=.*\b(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国低倍`select`.*0\.(?:[1-9]|[0-9]\d).*`url-test`^(?=.*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇨🇳 台湾低倍`select`.*0\.(?:[1-9]|[0-9]\d).*`url-test`^(?=.*\b(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
