--- a/fenliu(atom).ini
+++ b/fenliu(atom).ini
@@ -82,7 +82,7 @@ custom_proxy_group=📲 Line`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`
 custom_proxy_group=📲 Whatsapp`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎤 Discord`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=💳 Paypal`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 Bahamut`select`[]🇨🇳 台湾1倍`[]🇨🇳 台湾1倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 Bahamut`select`[]🇨🇳 台湾1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎵 Shopify`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📽️ Disney`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📽️ Netflix`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
