--- a/fenliu(atom).ini
+++ b/fenliu(atom).ini
@@ -95,12 +95,12 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🇭🇰 香港1倍`url-test`^(?!.*\b(0(\.\d+)?|100(\.0+)?|[2-9]\d*(\.\d+)?\s*×)\b).*\b(港|HK|Hong Kong)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本1倍`url-test`^(?!.*\b(0(\.\d+)?|100(\.0+)?|[2-9]\d*(\.\d+)?\s*×)\b).*\b(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国1倍`url-test`^(?!.*\b(0(\.\d+)?|100(\.0+)?|[2-9]\d*(\.\d+)?\s*×)\b).*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)\b`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇨🇳 台湾1倍`url-test`^(?!.*\b(0(\.\d+)?|100(\.0+)?|[2-9]\d*(\.\d+)?\s*×)\b).*\b(台|新北|彰化|TW|Taiwan)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?!.*\b(0(\.\d+)?|100(\.0+)?|[2-9]\d*(\.\d+)?\s*×)\b).*\b(新加坡|坡|狮城|SG|Singapore)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?!.*\b(0(\.\d+)?|100(\.0+)?|[2-9]\d*(\.\d+)?\s*×)\b).*\b(KR|Korea|KOR|首尔|韩|韓)\b`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港1倍`url-test`^(?!.*\b(0(\.\d+)?|[2-9]\d*(\.\d+)?|100(\.0+)?)\b).*\b(港|HK|Hong Kong)\b`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本1倍`url-test`^(?!.*\b(0(\.\d+)?|[2-9]\d*(\.\d+)?|100(\.0+)?)\b).*\b(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)\b`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国1倍`url-test`^(?!.*\b(0(\.\d+)?|[2-9]\d*(\.\d+)?|100(\.0+)?)\b).*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)\b`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇨🇳 台湾1倍`url-test`^(?!.*\b(0(\.\d+)?|[2-9]\d*(\.\d+)?|100(\.0+)?)\b).*\b(台|新北|彰化|TW|Taiwan)\b`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?!.*\b(0(\.\d+)?|[2-9]\d*(\.\d+)?|100(\.0+)?)\b).*\b(新加坡|坡|狮城|SG|Singapore)\b`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?!.*\b(0(\.\d+)?|[2-9]\d*(\.\d+)?|100(\.0+)?)\b).*\b(KR|Korea|KOR|首尔|韩|韓)\b`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
