--- a/fenliu(atom).ini
+++ b/fenliu(atom).ini
@@ -65,48 +65,42 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌐 Google`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎬 YouTube`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🛍️ Google Play`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🖥 Microsoft`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🌐 Google`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎬 YouTube`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🛍️ Google Play`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🖥 Microsoft`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=☁︎ onedrive`select`[]DIRECT
-custom_proxy_group=🤖 OpenAi`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📲 Facebook`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📲 Twitter`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📲 Line`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📲 Whatsapp`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎤 Discord`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=💳 Paypal`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 Bahamut`select`[]🇨🇳 台湾1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎵 Shopify`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📽️ Disney`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📽️ Netflix`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎮 Game`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🤖 OpenAi`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📲 Facebook`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📲 Twitter`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📲 Line`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📲 Whatsapp`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎤 Discord`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=💳 Paypal`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 Bahamut`select`[]🇨🇳 台湾节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎵 Shopify`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📽️ Disney`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📽️ Netflix`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎮 Game`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📽️ 国内媒体`select`[]DIRECT
-custom_proxy_group=📽️ 国外媒体`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📽️ 国外媒体`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港1倍`[]🇨🇳 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🇭🇰 香港1倍`url-test`^(?!.*\b(0(\.\d+)?|[2-9]\d*(\.\d+)?|100(\.0+)?)\s*×).*\b(港|HK|Hong Kong)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本1倍`url-test`^(?!.*\b(0(\.\d+)?|[2-9]\d*(\.\d+)?|100(\.0+)?)\s*×).*\b(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国1倍`url-test`^(?!.*\b(0(\.\d+)?|[2-9]\d*(\.\d+)?|100(\.0+)?)\s*×).*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)\b`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇨🇳 台湾1倍`url-test`^(?!.*\b(0(\.\d+)?|[2-9]\d*(\.\d+)?|100(\.0+)?)\s*×).*\b(台|新北|彰化|TW|Taiwan)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?!.*\b(0(\.\d+)?|[2-9]\d*(\.\d+)?|100(\.0+)?)\s*×).*\b(新加坡|坡|狮城|SG|Singapore)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?!.*\b(0(\.\d+)?|[2-9]\d*(\.\d+)?|100(\.0+)?)\s*×).*\b(KR|Korea|KOR|首尔|韩|韓)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇨🇳 台湾低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🇭🇰 香港节点`url-test`([01](\.[0-9]{1,2})?|[Xx×][01](\.[0-9]{1,2})?)(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`([01](\.[0-9]{1,2})?|[Xx×][01](\.[0-9]{1,2})?)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`url-test`([01](\.[0-9]{1,2})?|[Xx×][01](\.[0-9]{1,2})?)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇨🇳 台湾节点`url-test`([01](\.[0-9]{1,2})?|[Xx×][01](\.[0-9]{1,2})?)(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城节点`url-test`([01](\.[0-9]{1,2})?|[Xx×][01](\.[0-9]{1,2})?)(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国节点`url-test`([01](\.[0-9]{1,2})?|[Xx×][01](\.[0-9]{1,2})?)(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 ;设置分组标志位
 
 enable_rule_generator=true
