--- a/多倍分流.ini
+++ b/多倍分流.ini
@@ -96,26 +96,26 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
 #低倍节点
-custom_proxy_group=🇭🇰 香港低倍`url-test`(?<=[×Xx|]\s*)(0\.[0-9]+|0\.0[1-9]+|0\.00[1-9]+)(?=\s*[\|]|$)(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本低倍`url-test`(?<=[×Xx|]\s*)(0\.[0-9]+|0\.0[1-9]+|0\.00[1-9]+)(?=\s*[\|]|$)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国低倍`url-test`(?<=[×Xx|]\s*)(0\.[0-9]+|0\.0[1-9]+|0\.00[1-9]+)(?=\s*[\|]|$)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇨🇳 台湾低倍`url-test`(?<=[×Xx|]\s*)(0\.[0-9]+|0\.0[1-9]+|0\.00[1-9]+)(?=\s*[\|]|$)(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城低倍`url-test`(?<=[×Xx|]\s*)(0\.[0-9]+|0\.0[1-9]+|0\.00[1-9]+)(?=\s*[\|]|$)(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国低倍`url-test`(?<=[×Xx|]\s*)(0\.[0-9]+|0\.0[1-9]+|0\.00[1-9]+)(?=\s*[\|]|$)(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港低倍`url-test`(?<=[×|X|x]\s*)(0\.[0-9]+|0\.0[1-9]+|0\.00[1-9]+)(?=\s*[\|]|$)(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本低倍`url-test`(?<=[×|X|x]\s*)(0\.[0-9]+|0\.0[1-9]+|0\.00[1-9]+)(?=\s*[\|]|$)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国低倍`url-test`(?<=[×|X|x]\s*)(0\.[0-9]+|0\.0[1-9]+|0\.00[1-9]+)(?=\s*[\|]|$)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇨🇳 台湾低倍`url-test`(?<=[×|X|x]\s*)(0\.[0-9]+|0\.0[1-9]+|0\.00[1-9]+)(?=\s*[\|]|$)(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城低倍`url-test`(?<=[×|X|x]\s*)(0\.[0-9]+|0\.0[1-9]+|0\.00[1-9]+)(?=\s*[\|]|$)(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国低倍`url-test`(?<=[×|X|x]\s*)(0\.[0-9]+|0\.0[1-9]+|0\.00[1-9]+)(?=\s*[\|]|$)(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 #1倍节点
-custom_proxy_group=🇭🇰 香港1倍`url-test`(?<=[×Xx|]\s*)(1)(?=\s*[\|]|$)(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本1倍`url-test`(?<=[×Xx|]\s*)(1)(?=\s*[\|]|$)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国1倍`url-test`(?<=[×Xx|]\s*)(1)(?=\s*[\|]|$)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇨🇳 台湾1倍`url-test`(?<=[×Xx|]\s*)(1)(?=\s*[\|]|$)(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城1倍`url-test`(?<=[×Xx|]\s*)(1)(?=\s*[\|]|$)(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国1倍`url-test`(?<=[×Xx|]\s*)(1)(?=\s*[\|]|$)(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港1倍`url-test`(?<=[×|X|x]\s*)(1)(?=\s*[\|]|$)(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本1倍`url-test`(?<=[×|X|x\s*)(1)(?=\s*[\|]|$)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国1倍`url-test`(?<=[×|X|x]\s*)(1)(?=\s*[\|]|$)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇨🇳 台湾1倍`url-test`(?<=[×|X|x]\s*)(1)(?=\s*[\|]|$)(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城1倍`url-test`(?<=[×|X|x]\s*)(1)(?=\s*[\|]|$)(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国1倍`url-test`(?<=[×|X|x]\s*)(1)(?=\s*[\|]|$)(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 #高倍节点
-custom_proxy_group=🇭🇰 香港高倍`url-test`(?<=[×Xx|]\s*)([1-9][0-9]*\.[0-9]+|[1-9]+\.[0-9]+|[1-9]+)(?=\s*[\|]|$)(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本高倍`url-test`(?<=[×Xx|]\s*)([1-9][0-9]*\.[0-9]+|[1-9]+\.[0-9]+|[1-9]+)(?=\s*[\|]|$)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国高倍`url-test`(?<=[×Xx|]\s*)([1-9][0-9]*\.[0-9]+|[1-9]+\.[0-9]+|[1-9]+)(?=\s*[\|]|$)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇨🇳 台湾高倍`url-test`(?<=[×Xx|]\s*)([1-9][0-9]*\.[0-9]+|[1-9]+\.[0.9]+|[1-9]+)(?=\s*[\|]|$)(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城高倍`url-test`(?<=[×Xx|]\s*)([1-9][0-9]*\.[0-9]+|[1-9]+\.[0.9]+|[1-9]+)(?=\s*[\|]|$)(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国高倍`url-test`(?<=[×Xx|]\s*)([1-9][0-9]*\.[0-9]+|[1-9]+\.[0.9]+|[1-9]+)(?=\s*[\|]|$)(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港高倍`url-test`(?<=[×|X|x]\s*)([1-9][0-9]*\.[0-9]+|[1-9]+\.[0-9]+|[1-9]+)(?=\s*[\|]|$)(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本高倍`url-test`(?<=[×|X|x\s*)([1-9][0-9]*\.[0-9]+|[1-9]+\.[0-9]+|[1-9]+)(?=\s*[\|]|$)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国高倍`url-test`(?<=[×|X|x]\s*)([1-9][0-9]*\.[0-9]+|[1-9]+\.[0-9]+|[1-9]+)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇨🇳 台湾高倍`url-test`(?<=[×|X|x]\s*)([1-9][0-9]*\.[0-9]+|[1-9]+\.[0.9]+|[1-9]+)(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城高倍`url-test`(?<=[×|X|x]\s*)([1-9][0-9]*\.[0-9]+|[1-9]+\.[0.9]+|[1-9]+)(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国高倍`url-test`(?<=[×|X|x]\s*)([1-9][0-9]*\.[0-9]+|[1-9]+\.[0.9]+|[1-9]+)(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 ;设置分组标志位
 
 enable_rule_generator=true
