--- a/分流多倍率.ini
+++ b/分流多倍率.ini
@@ -88,7 +88,7 @@ custom_proxy_group=📽️ Disney`select`[]♻️ 自动选择`[]🇭🇰 香港
 custom_proxy_group=📽️ Netflix`select`[]♻️ 自动选择`[]🇭🇰 香港低倍`[]🇭🇰 香港1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎮 Game`select`[]🇭🇰 香港低倍`[]🇨🇳 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📽️ 国内媒体`select`[]DIRECT
-custom_proxy_group=📽️ 国外媒体[]♻️ 自动选择`[]🇭🇰 香港低倍`[]🇭🇰 香港1倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📽️ 国外媒体`[]♻️ 自动选择`[]🇭🇰 香港低倍`[]🇭🇰 香港1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
