--- a/分流多倍率.ini
+++ b/分流多倍率.ini
@@ -107,7 +107,7 @@ custom_proxy_group=🇺🇲 美国1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b)
 custom_proxy_group=🇨🇳 台湾1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(台|新北|彰化|TW|Taiwan)\b`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(新加坡|坡|狮城|SG|Singapore)\b`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?!.*\b0\.(?:[1-9]|[0-9]\d)?\b).*\b(KR|Korea|KOR|首尔|韩|韓)\b`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=⭐ 特殊低倍`url-test`(Luxembourg)`http://www.gstatic.com/generate_204`
+custom_proxy_group=⭐ 特殊低倍`url-test`(Luxembourg)`http://www.gstatic.com/generate_204`300,,50
 
 ;设置分组标志位
 
