--- a/分流多倍率.ini
+++ b/分流多倍率.ini
@@ -68,9 +68,9 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌐 Google`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍
+custom_proxy_group=🌐 Google`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎬 YouTube`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🏬 Google Play`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍
+custom_proxy_group=🏬 Google Play`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🖥 Microsoft`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=☁︎ onedrive`select`[]DIRECT
 custom_proxy_group=🤖 OpenAi`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🚀 节点选择`[]🚀 手动切换
@@ -86,15 +86,15 @@ custom_proxy_group=📺 Bahamut`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾
 custom_proxy_group=🎵 Shopify`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📽️ Disney`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📽️ Netflix`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎮 Game`select`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 手动切换
+custom_proxy_group=🎮 Game`select`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📽️ 国内媒体`select`[]DIRECT
-custom_proxy_group=📽️ 国外媒体`select`[]🚀 节点选择
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
+custom_proxy_group=📽️ 国外媒体`select`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🇭🇰 香港低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
