--- a/分流多倍率.ini
+++ b/分流多倍率.ini
@@ -46,7 +46,7 @@ ruleset=📺 Bahamut,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=🎶 Shopify,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Spotify.list
 ruleset=📺 Disney,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset=📺 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=📺 emby,https://raw.githubusercontent.com/Yzaams/clash/main/emby.list
+ruleset=📺 Emby,https://raw.githubusercontent.com/Yzaams/clash/main/emby.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/Yzaams/clash/main/movies.list
 ruleset=📺 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
@@ -86,7 +86,7 @@ custom_proxy_group=🤝 Discord`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城
 custom_proxy_group=🎶 Shopify`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 Disney`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 emby`select`[]DIRECT
+custom_proxy_group=📺 Emby`select`[]DIRECT
 custom_proxy_group=📺 国内媒体`select`[]DIRECT
 custom_proxy_group=📺 国外媒体`select`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🎮 Bahamut`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾1倍`[]🇹🇼 台湾高级`[]🚀 节点选择`[]🚀 手动切换
