--- a/分流多倍率.ini
+++ b/分流多倍率.ini
@@ -77,15 +77,15 @@ custom_proxy_group=☁️ onedrive`select`[]DIRECT
 custom_proxy_group=💡 OpenAi`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=💳 Paypal`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📱 Telegram`select`[]🇯🇵 日本低倍`[]🇯🇵 日本1倍`[]🇯🇵 日本高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📱 Facebook`select`[]🇯🇵 日本低倍`[]🇯🇵 日本1倍`[]🇯🇵 日本高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📱 Twitter`select`[]🇯🇵 日本低倍`[]🇯🇵 日本1倍`[]🇯🇵 日本高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📱 Telegram`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📱 Facebook`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📱 Twitter`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🤝 Line`select`[]🇹🇼 台湾低倍`[]🇹🇼 台湾1倍`[]🇹🇼 台湾高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🤝 Whatsapp`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🤝 Discord`select`[]🇯🇵 日本低倍`[]🇯🇵 日本1倍`[]🇯🇵 日本高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🎶 Shopify`select`[]🇯🇵 日本低倍`[]🇯🇵 日本1倍`[]🇯🇵 日本高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 Disney`select`[]🇯🇵 日本低倍`[]🇯🇵 日本1倍`[]🇯🇵 日本高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 Netflix`select`[]🇯🇵 日本低倍`[]🇯🇵 日本1倍`[]🇯🇵 日本高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🤝 Discord`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=🎶 Shopify`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 Disney`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 Emby`select`[]DIRECT`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 国内媒体`select`[]DIRECT
 custom_proxy_group=📺 国外媒体`select`[]🚀 节点选择`[]🚀 手动切换
