--- a/分流多倍率.ini
+++ b/分流多倍率.ini
@@ -19,6 +19,7 @@ ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
 ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
 ruleset=🛡️ 隐私防护,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
+ruleset=💡 Ai工具,https://raw.githubusercontent.com/Yzaams/clash/main/AI%E5%B7%A5%E5%85%B7.list
 ruleset=💡 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🛍️ Google Play,https://raw.githubusercontent.com/Yzaams/clash/main/Google%20Play.list
 ruleset=📺 YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
@@ -74,6 +75,7 @@ custom_proxy_group=📺 YouTube`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城
 custom_proxy_group=🛍️ Google Play`select`[]🇭🇰 香港低倍`[]🇹🇼 台湾低倍`[]🇸🇬 狮城低倍`[]🇯🇵 日本低倍`[]🇺🇲 美国低倍`[]🇰🇷 韩国低倍`[]🇭🇰 香港1倍`[]🇹🇼 台湾1倍`[]🇸🇬 狮城1倍`[]🇯🇵 日本1倍`[]🇺🇲 美国1倍`[]🇰🇷 韩国1倍`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=Ⓜ️ Microsoft`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=☁️ onedrive`select`[]DIRECT
+custom_proxy_group=💡 AI工具`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=💡 OpenAi`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=💳 Paypal`select`[]🇺🇲 美国低倍`[]🇺🇲 美国1倍`[]🇺🇲 美国高级`[]🚀 节点选择`[]🚀 手动切换
