--- a/分流多倍率.ini
+++ b/分流多倍率.ini
@@ -19,7 +19,7 @@ ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
 ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
 ruleset=🛡️ 隐私防护,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
-ruleset=💡 Ai工具,https://raw.githubusercontent.com/Yzaams/clash/main/AI%E5%B7%A5%E5%85%B7.list
+ruleset=💡 AI工具,https://raw.githubusercontent.com/Yzaams/clash/main/AI%E5%B7%A5%E5%85%B7.list
 ruleset=💡 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🛍️ Google Play,https://raw.githubusercontent.com/Yzaams/clash/main/Google%20Play.list
 ruleset=📺 YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
