--- a/XTT@GM.ini
+++ b/XTT@GM.ini
@@ -48,7 +48,7 @@ ruleset=🎮 Bahamut,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=🎶 Shopify,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Spotify.list
 ruleset=📺 Disney,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset=📺 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=📺 guguEmby,https://raw.githubusercontent.com/Yzaams/clash/main/guguemby.list
+ruleset=📺 xttlove,https://raw.githubusercontent.com/Yzaams/clash/main/xttlove.list
 ruleset=📺 mjjEmby,https://raw.githubusercontent.com/Yzaams/clash/main/mjjemby.list
 ruleset=📺 Emby,https://raw.githubusercontent.com/Yzaams/clash/main/emby.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
