--- a/XTT@GM.ini
+++ b/XTT@GM.ini
@@ -93,7 +93,7 @@ custom_proxy_group=🤝 Discord`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城
 custom_proxy_group=🎶 Shopify`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 Disney`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 guguEmby`select`[]🌏 守候线路
+custom_proxy_group=📺 xttlove`select`[]🌏 守候线路
 custom_proxy_group=📺 mjjEmby`select`[]🌏 古茗线路
 custom_proxy_group=📺 Emby`select`[]DIRECT`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 国内媒体`select`[]DIRECT
