--- a/XTT@GM.ini
+++ b/XTT@GM.ini
@@ -49,7 +49,7 @@ ruleset=🎶 Shopify,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=📺 Disney,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset=📺 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=📺 xttlove,https://raw.githubusercontent.com/Yzaams/clash/main/xttlove.list
-ruleset=📺 mjjEmby,https://raw.githubusercontent.com/Yzaams/clash/main/mjjemby.list
+ruleset=📺 goodme,https://raw.githubusercontent.com/Yzaams/clash/main/goodme.list
 ruleset=📺 Emby,https://raw.githubusercontent.com/Yzaams/clash/main/emby.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/Yzaams/clash/main/%E5%9B%BD%E5%86%85%E5%AA%92%E4%BD%93.list
@@ -94,7 +94,7 @@ custom_proxy_group=🎶 Shopify`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城
 custom_proxy_group=📺 Disney`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 xttlove`select`[]🌏 守候线路
-custom_proxy_group=📺 mjjEmby`select`[]🌏 古茗线路
+custom_proxy_group=📺 goodme`select`[]🌏 古茗线路
 custom_proxy_group=📺 Emby`select`[]DIRECT`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 国内媒体`select`[]DIRECT
 custom_proxy_group=📺 国外媒体`select`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
